@@ -40,9 +40,9 @@ public class SecurityConfig {
                 .cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
                     CorsConfiguration configuration = new CorsConfiguration();
                     configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:13000", "https://k11c201.p.ssafy.io"));
-                    configuration.setAllowedMethods(Collections.singletonList("*"));
+                    configuration.setAllowedMethods(List.of("*"));
                     configuration.setAllowCredentials(true);
-                    configuration.setAllowedHeaders(Collections.singletonList("*"));
+                    configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
                     configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization"));
                     return configuration;
                 }))
